<resources>
    <string name="app_name">ContactosApp</string>
    <string name="txt_name">Nombre Completo</string>
    <string name="txt_date">Fecha de Nacimiento</string>
    <string name="txt_phone">Telefono</string>
    <string name="txt_email">Email</string>
    <string name="txt_desc">Descripción del contacto</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_Editar">Editar Datos</string>
    <string name="txt_Descripcion">Descripción:</string>
    <string name="pnombre">nombre</string>
    <string name="pfecha">fecha</string>
    <string name="ptel">tel</string>
    <string name="pcorreo">correo</string>
    <string name="pdesc">desc</string>

</resources>
