<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ncopado.contactosapp.MainActivity"
    android:orientation="vertical"
    android:weightSum="1"


    >




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"

        android:id="@+id/textInputLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
       >

        <android.support.design.widget.TextInputEditText
        android:id="@+id/tvName"
         android:layout_width="@dimen/etx_with"
        android:layout_height="wrap_content"
        android:hint="@string/txt_name"
        android:layout_marginLeft="@dimen/marginLeft"

            android:fontFamily="casual"
        />




    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"

        android:id="@+id/textInputLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <android.support.design.widget.TextInputEditText
           android:id="@+id/tvDate"
            android:layout_width="@dimen/etx_with"
            android:layout_height="wrap_content"
            android:hint="@string/txt_date"
            android:layout_marginLeft="@dimen/marginLeft"
            android:fontFamily="casual"

            />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"

        android:id="@+id/textInputLayout3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tvPhone"
            android:layout_width="@dimen/etx_with"
            android:layout_height="wrap_content"
            android:hint="@string/txt_phone"
            android:layout_marginLeft="@dimen/marginLeft"
            android:fontFamily="casual"
            />




    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"

        android:id="@+id/textInputLayout4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tvEmail"
            android:layout_width="@dimen/etx_with"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"
            android:layout_marginLeft="@dimen/marginLeft"
            android:fontFamily="casual"
            />




    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"

        android:id="@+id/textInputLayout5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tvDesc"
            android:layout_width="@dimen/etx_with"
            android:layout_height="wrap_content"
            android:hint="@string/txt_desc"
            android:layout_marginLeft="@dimen/marginLeft"
            android:fontFamily="casual"
            />




    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        android:layout_marginTop="25dp"
        />


</LinearLayout>
